Add spotless, errorProne, NullAway plugins